# rscrypto

./: .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  SECURITY_NOTES.md  THREAT_MODEL.md  codecov.yml  ct.toml  deny.toml  justfile  release.md  rust-toolchain.toml  rustfmt.toml
crates/backend/: Cargo.toml
crates/backend/src/: cache.rs  caps.rs  dispatch.rs  family.rs  lib.rs  policy.rs  tier.rs
crates/checksum/: Cargo.toml  arch_list.md  checksum_update.md  major_fix.md  updates.md
crates/checksum/benches/: combine.rs  comp.rs  comp_bench.rs  crc16.rs  crc24.rs  crc32.rs  crc32c.rs  crc64.rs  kernels.rs  util.rs
crates/checksum/examples/: basic.rs  introspect.rs  parallel.rs
crates/checksum/fuzz/: Cargo.toml
crates/checksum/src/: bench.rs  combine.rs  diag.rs  dispatch.rs  dispatchers.rs  introspect.rs  io.rs  lib.rs  macros.rs  parallel.rs  params.rs  tune.rs
crates/checksum/tests/: common_properties.rs  crc16_properties.rs  crc24_properties.rs  crc32_properties.rs  crc64_properties.rs  invariants.rs  portable_fallback.rs  proptests.rs  vectored_dispatch.rs
crates/hash/: Cargo.toml
crates/hash/benches/: hash.rs
crates/hash/src/: lib.rs
crates/hashes/: Cargo.toml  order.md
crates/hashes/benches/: blake3.rs  blake3_short_input_attribution.rs  comp.rs  kernels.rs
crates/hashes/fuzz/: .gitignore  Cargo.toml  README.md
crates/hashes/src/: bench.rs  io.rs  lib.rs  util.rs
crates/hashes/tests/: ascon_differential.rs  ascon_official_vectors.rs  blake2_differential.proptest-regressions  blake2_differential.rs  blake2_official_vectors.rs  blake3_differential.proptest-regressions  blake3_differential.rs  blake3_official_vectors.rs  cshake_differential.rs  kmac_differential.rs  rapidhash_differential.rs  sha256_differential.rs  sha256_official_vectors.rs  sha2_official_vectors.rs  sha3_differential.rs  sha3_official_vectors.rs  sha512_differential.rs  shake128_differential.rs  shake256_differential.rs  siphash_differential.rs  xxh3_differential.rs
crates/platform/: Cargo.toml
crates/platform/fuzz/: Cargo.toml
crates/platform/src/: aarch64.rs  caps.rs  detect.rs  dispatch.rs  lib.rs  target_matrix.rs  tune.rs  x86_64.rs
crates/rscrypto/: Cargo.toml
crates/rscrypto/src/: lib.rs
crates/traits/: Cargo.toml
crates/traits/src/: checksum.rs  digest.rs  error.rs  fast_hash.rs  io.rs  lib.rs
crates/tune/: Cargo.toml
crates/tune/src/: analysis.rs  apply.rs  blake3.rs  crc16.rs  crc24.rs  crc32.rs  crc64.rs  engine.rs  hash.rs  lib.rs  raw.rs  report.rs  runner.rs  sampler.rs  sha256.rs  sha512.rs  stats.rs  targets.rs
fuzz/: .gitignore  Cargo.toml
fuzz-packages/aead-aegis256/: Cargo.toml
fuzz-packages/aead-aegis256/fuzz_targets/: aead_aegis256.rs
fuzz-packages/aead-aegis256/tests/: corpus_replay.rs
fuzz-packages/aead-aes256gcm/: Cargo.toml
fuzz-packages/aead-aes256gcm/fuzz_targets/: aead_aes256gcm.rs
fuzz-packages/aead-aes256gcm/tests/: corpus_replay.rs
fuzz-packages/aead-aes256gcmsiv/: Cargo.toml
fuzz-packages/aead-aes256gcmsiv/fuzz_targets/: aead_aes256gcmsiv.rs
fuzz-packages/aead-aes256gcmsiv/tests/: corpus_replay.rs
fuzz-packages/aead-ascon128/: Cargo.toml
fuzz-packages/aead-ascon128/fuzz_targets/: aead_ascon128.rs
fuzz-packages/aead-ascon128/tests/: corpus_replay.rs
fuzz-packages/aead-chacha20poly1305/: Cargo.toml
fuzz-packages/aead-chacha20poly1305/fuzz_targets/: aead_chacha20poly1305.rs
fuzz-packages/aead-chacha20poly1305/tests/: corpus_replay.rs
fuzz-packages/aead-nonce-counter/: Cargo.toml
fuzz-packages/aead-nonce-counter/fuzz_targets/: aead_nonce_counter.rs
fuzz-packages/aead-nonce-counter/tests/: corpus_replay.rs
fuzz-packages/aead-xchacha20poly1305/: Cargo.toml
fuzz-packages/auth-argon2/: Cargo.toml
fuzz-packages/auth-ed25519/: Cargo.toml
fuzz-packages/auth-hkdf/: Cargo.toml
fuzz-packages/auth-hmac/: Cargo.toml
fuzz-packages/auth-kmac256/: Cargo.toml
fuzz-packages/auth-pbkdf2/: Cargo.toml
fuzz-packages/auth-phc/: Cargo.toml
fuzz-packages/auth-scrypt/: Cargo.toml
fuzz-packages/auth-x25519/: Cargo.toml
fuzz-packages/checksums-crc24/: Cargo.toml
fuzz-packages/checksums-crc32/: Cargo.toml
fuzz-packages/checksums-crc64/: Cargo.toml
fuzz-packages/fast-rapidhash/: Cargo.toml
fuzz/dictionaries/: aead_boundary.dict  hex_parse.dict  phc.dict
fuzz/fuzz_targets/: aead_aegis256.rs  aead_aes128gcm.rs  aead_aes128gcmsiv.rs  aead_aes256gcm.rs  aead_aes256gcmsiv.rs  aead_ascon128.rs  aead_chacha20poly1305.rs  aead_nonce_counter.rs  aead_xchacha20poly1305.rs  auth_argon2d.rs  auth_argon2i.rs  auth_argon2id.rs  auth_ecdsa_sign.rs  auth_ecdsa_verify.rs  auth_ed25519.rs  auth_ed25519_verify.rs  auth_hkdf_sha256.rs  auth_hkdf_sha384.rs  auth_hmac_sha256.rs  auth_hmac_sha384.rs  auth_hmac_sha512.rs  auth_kmac256.rs  auth_mlkem1024.rs  auth_mlkem512.rs  auth_mlkem768.rs  auth_pbkdf2.rs  auth_phc.rs  auth_rsa_import.rs  auth_rsa_private_ops.rs  auth_rsa_protocol.rs  auth_rsa_public_key.rs  auth_rsa_verify.rs  auth_scrypt.rs  auth_x25519.rs  caps.rs  caps_ops.rs  checksum_crc.rs  checksum_crc16.rs  checksum_crc24.rs  checksum_crc32.rs  (+22 more)
fuzz/src/: lib.rs
fuzz/support/: Cargo.toml
fuzz/target_impls/: aead_aegis256.rs  aead_aes128gcm.rs  aead_aes128gcmsiv.rs  aead_aes256gcm.rs  aead_aes256gcmsiv.rs  aead_ascon128.rs  aead_chacha20poly1305.rs  aead_nonce_counter.rs  aead_xchacha20poly1305.rs  auth_argon2d.rs  auth_argon2i.rs  auth_argon2id.rs  auth_ecdsa_sign.rs  auth_ecdsa_verify.rs  auth_ed25519.rs  auth_ed25519_verify.rs  auth_hkdf_sha256.rs  auth_hkdf_sha384.rs  auth_hmac_sha256.rs  auth_hmac_sha384.rs  auth_hmac_sha512.rs  auth_kmac256.rs  auth_mlkem1024.rs  auth_mlkem512.rs  auth_mlkem768.rs  auth_pbkdf2.rs  auth_phc.rs  auth_rsa_import.rs  auth_rsa_private_ops.rs  auth_rsa_protocol.rs  auth_rsa_public_key.rs  auth_rsa_verify.rs  auth_scrypt.rs  auth_x25519.rs  checksum_crc.rs  checksum_crc16.rs  checksum_crc24.rs  checksum_crc32.rs  checksum_crc64.rs  fast_rapidhash.rs  (+13 more)
fuzz/tests/: corpus_replay.rs
(+1257 files in other folders)
