[package]
name = "rscrypto"
description = "Pure Rust cryptography. Hardware-accelerated. Zero dependencies."
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT OR Apache-2.0"
authors = ["loadingalias"]
repository = "https://github.com/loadingalias/rscrypto"
documentation = "https://docs.rs/rscrypto"
readme = "README.md"
keywords = ["crypto", "cryptography", "blake3", "simd", "no-std"]
categories = ["cryptography", "no-std", "algorithms", "hardware-support"]
include = [
  "/.config/target-matrix.json",
  "/Cargo.toml",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
  "/examples/**",
  "/src/**",
  "!/src/**/*.md",
  "!/src/**/*.txt",
  "!/src/**/.gitignore",
  "/tests/**",
  "/testdata/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
resolver = "3"
members = ["."]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT OR Apache-2.0"
authors = ["loadingalias"]
repository = "https://github.com/loadingalias/rscrypto"
documentation = "https://docs.rs/rscrypto"
readme = "README.md"

[workspace.lints.rust]
# `unsafe` is allowed in rscrypto, but must be narrow and well-documented.
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
dangling_pointers_from_locals = "deny"
integer_to_ptr_transmutes = "deny"
# Allow miri cfg and x86 target features not yet stabilized in rustc's check-cfg
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(miri)',
  'cfg(target_feature, values("movdiri", "movdir64b", "serialize"))',
] }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
unwrap_used = "allow"
expect_used = "allow"
indexing_slicing = "allow"

# Safety discipline:
# - `unsafe {}` blocks must have a `// SAFETY:` comment explaining why they're sound.
# - `unsafe fn` must document its safety contract.
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"

[features]
default = ["std", "checksums", "hashes", "auth", "aead"]
std = ["alloc"]
alloc = []
checksums = []
hashes = []
auth = ["hashes"]
aead = []
parallel = ["std", "dep:rayon"]
diag = ["std"]
testing = []

[dependencies]
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
# Benchmark framework
criterion = { version = "^0.8.2", default-features = false, features = ["html_reports", "plotters"] }
proptest = "^1.11.0"

# CRC oracle crates
crc = "3.4.0"
crc-fast = "1.10.0"
crc32c = "0.6.8"
crc32fast = "1.5.0"
crc64fast = "1.1.0"
crc64fast-nvme = "1.2.1"

# Hash oracle crates
ascon-hash = "0.4.0"
blake3 = { version = "1.8.4", default-features = false, features = ["std", "rayon"] }
sha2 = "0.11.0"
sha3 = "0.11.0"
keccak = "0.2.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rapidhash = "4.4.1"
tiny-keccak = { version = "2.0.2", features = ["cshake", "kmac"] }
digest = { version = "0.11.2", features = ["dev"] }
ed25519-dalek = "2.2.0"
hmac = "0.13.0"
hkdf = "0.13.0"
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
aegis = "0.9.8"

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "blake3"
harness = false

[[bench]]
name = "sha2"
harness = false

[[bench]]
name = "sha3"
harness = false

[[bench]]
name = "ascon"
harness = false

[[bench]]
name = "auth"
harness = false

[[bench]]
name = "xxh3"
harness = false

[[bench]]
name = "rapidhash"
harness = false

[[bench]]
name = "crc"
harness = false

[[example]]
name = "basic"
required-features = ["std"]

[[example]]
name = "introspect"
required-features = ["std"]

[[example]]
name = "parallel"
required-features = ["parallel"]

[lints]
workspace = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = false # Higher sccache hit rates and faster build/check/test cycles
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo" # Keep symbols for backtraces, remove debug info
overflow-checks = true # Critical for crypto: overflow = security vulnerability
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true # Enable debug symbols for profiling and analysis
