[package]
name = "rscrypto"
description = "Pure Rust Cryptography: RSA, Ed25519, X25519, SHA-2/3, BLAKE2/3, AES-GCM/GCM-SIV, X/ChaCha20-Poly1305, Argon2, HMAC/HKDF, CRC. no_std, WASM, hardware acceleration."
version = "0.6.4"
edition = "2024"
rust-version = "1.91.0"
autobenches = false
license = "MIT OR Apache-2.0"
authors = ["loadingalias"]
repository = "https://github.com/loadingalias/rscrypto"
documentation = "https://docs.rs/rscrypto"
readme = "README.md"
keywords = ["cryptography", "no-std", "aead", "blake3", "simd"]
categories = ["cryptography", "no-std", "algorithms", "hardware-support", "embedded"]
include = [
  "/Cargo.toml",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
  "/SECURITY.md",
  "/THREAT_MODEL.md",
  "/CONTRIBUTING.md",
  "/.config/target-matrix.json",
  "/assets/readme/perf.svg",
  "/benchmark_results/OVERVIEW.md",
  "/benches/rsa_fixtures/**",
  "/docs/**",
  "/examples/**",
  "/src/**",
  "!/.DS_Store",
  "!/docs/.DS_Store",
  "!/docs/**/.DS_Store",
  "!/docs/**/notes/**",
  "!/docs/funding/**",
  "!/docs/tasks/**",
  "!/docs/llvm-ppc64le-readvolatile-issue.md",
  "!/src/**/*.md",
  "!/src/**/*.txt",
  "!/src/**/.gitignore",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
resolver = "3"
members = ["."]

[workspace.lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
dangling_pointers_from_locals = "deny"
integer_to_ptr_transmutes = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(miri)',
  'cfg(fuzzing)',
  'cfg(rscrypto_internal_fuzzing)',
  'cfg(target_feature, values("movdiri", "movdir64b", "serialize"))',
] }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
unwrap_used = "allow"
expect_used = "allow"
indexing_slicing = "allow"

undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
crc16 = []
crc24 = []
crc32 = []
crc64 = []

sha2 = []
sha3 = []
blake2b = []
blake2s = []
blake3 = []
ascon-hash = []
xxh3 = []
rapidhash = []

hmac = ["sha2"]
hmac-sha3 = ["sha3"]
hkdf = ["hmac"]
pbkdf2 = ["hmac"]
kmac = ["sha3"]
poly1305 = []
ecdsa-p256 = ["hmac"]
ecdsa-p384 = ["hmac"]
ecdsa = ["ecdsa-p256", "ecdsa-p384"]
ed25519 = ["sha2"]
rsa = ["alloc", "sha2"]
x25519 = []
ml-kem = ["sha3"]

phc-strings = ["alloc"]
argon2 = ["blake2b", "alloc"]
scrypt = ["pbkdf2", "alloc"]

aes-gcm = []
aes-gcm-siv = []
chacha20poly1305 = []
xchacha20poly1305 = []
aegis256 = []
ascon-aead = []

checksums = ["crc16", "crc24", "crc32", "crc64"]
crypto-hashes = ["sha2", "sha3", "blake2b", "blake2s", "blake3", "ascon-hash"]
fast-hashes = ["xxh3", "rapidhash"]
hashes = ["crypto-hashes", "fast-hashes"]
macs = ["hmac", "hmac-sha3", "kmac", "poly1305"]
kdfs = ["hkdf", "pbkdf2"]
password-hashing = ["argon2", "scrypt", "phc-strings"]
signatures = ["ecdsa", "ed25519", "rsa"]
key-exchange = ["x25519", "ml-kem"]
auth = ["macs", "kdfs", "password-hashing", "signatures", "key-exchange"]
aead = ["aes-gcm", "aes-gcm-siv", "chacha20poly1305", "xchacha20poly1305", "aegis256", "ascon-aead"]
full = ["checksums", "hashes", "auth", "aead"]
getrandom = ["dep:getrandom"]
serde = ["dep:serde"]
serde-secrets = ["serde"]
parallel = ["std", "blake3", "argon2", "dep:rayon"]
diag = ["std"]

# Force runtime dispatch through portable fallbacks. This does not remove
# compiled SIMD/ASM code or replace CT evidence; use target-feature flags when
# binary-level exclusion is required.
portable-only = []

[dependencies]
getrandom = { version = "0.4.3", optional = true }
rayon = { version = "1.12.0", optional = true }
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "^0.8.2", default-features = false, features = [
  "html_reports",
  "plotters",
] }
proptest = "^1.11.0"

# Oracles
crc = "3.4.0"
crc-fast = { version = "1.10.0", default-features = false, features = ["std"] }
crc32c = "0.6.8"
crc32fast = "1.5.0"
crc64fast = "1.1.0"
ascon-hash = "0.4.0"
argon2 = { version = "0.6.0-rc.8", default-features = false, features = ["alloc"] }
blake3 = { version = "1.8.5", default-features = false, features = ["std", "rayon"] }
blake2 = "0.11.0-rc.6"
pbkdf2 = "0.13.0"
scrypt = { version = "0.12.0", default-features = false }
sha2 = "0.11.0"
sha2_010 = { package = "sha2", version = "0.10.9" }
sha3 = "0.12.0"
keccak = "0.2.0"
xxhash-rust = { version = "0.8.16", features = ["xxh3"] }
rapidhash = "=4.5.1"
tiny-keccak = { version = "2.0.2", features = ["cshake", "kmac", "shake"] }
digest = { version = "0.11.3", features = ["dev"] }
p256 = { version = "0.14.0", default-features = false, features = ["ecdsa", "pkcs8", "std"] }
p384 = { version = "0.13.1", default-features = false, features = ["ecdsa", "pkcs8", "std"] }
ed25519-dalek = "2.2.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
fips203 = { version = "0.4.3", default-features = false, features = ["ml-kem-512", "ml-kem-768", "ml-kem-1024"] }
rustcrypto-ml-kem = { package = "ml-kem", version = "0.3.2", default-features = false, features = ["hazmat"] }
hmac = "0.13.0"
hkdf = "0.13.0"
chacha20poly1305 = "0.11.0"
aes-gcm = "0.11.0"
aes-gcm-siv = "0.11.1"
aegis = "0.9.12"
ascon-aead = { version = "0.6", default-features = false, features = ["alloc"] }
serde_json = "1"
ring = "0.17.14"
rsa = { version = "0.9.10", default-features = false, features = ["std", "u64_digit", "sha2"] }
dryoc = "0.8.0"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dev-dependencies]
libcrux-ml-kem = { version = "0.0.9", default-features = false, features = [
  "mlkem512",
  "mlkem768",
  "mlkem1024",
  "simd256",
] }

[target.'cfg(target_arch = "aarch64")'.dev-dependencies]
libcrux-ml-kem = { version = "0.0.9", default-features = false, features = [
  "mlkem512",
  "mlkem768",
  "mlkem1024",
  "simd128",
] }

[target.'cfg(not(any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dev-dependencies]
libcrux-ml-kem = { version = "0.0.9", default-features = false, features = [
  "mlkem512",
  "mlkem768",
  "mlkem1024",
] }

[target.'cfg(all(any(unix, windows), not(target_arch = "wasm32"), not(any(target_arch = "s390x", target_arch = "powerpc64"))))'.dev-dependencies]
aws-lc-rs = "1.17.1"
aws-lc-sys = "0.41.0"

[lib]
bench = false

[[example]]
name = "basic"
required-features = ["full", "getrandom"]

[[example]]
name = "introspect"
required-features = ["checksums", "hashes", "aead", "diag"]

[[example]]
name = "parallel"
required-features = ["checksums"]

[[example]]
name = "password_hashing"
required-features = ["password-hashing", "getrandom"]

[[example]]
name = "aead_seal_open"
required-features = ["alloc", "chacha20poly1305", "getrandom"]

[[example]]
name = "signatures"
required-features = ["ed25519", "ecdsa-p256", "getrandom"]

[[example]]
name = "rsa_pss_verify"
required-features = ["rsa"]

[[example]]
name = "mlkem_encapsulation"
required-features = ["ml-kem", "getrandom"]

[[bench]]
name = "aead"
harness = false
required-features = [
  "aes-gcm",
  "aes-gcm-siv",
  "chacha20poly1305",
  "xchacha20poly1305",
  "aegis256",
  "ascon-aead",
]

[[bench]]
name = "aead_kernels"
harness = false
required-features = ["chacha20poly1305", "diag", "sha2"]

[[bench]]
name = "blake2"
harness = false
required-features = ["blake2b", "blake2s"]

[[bench]]
name = "blake3"
harness = false
required-features = ["blake3"]

[[bench]]
name = "sha2"
harness = false
required-features = ["sha2"]

[[bench]]
name = "sha3"
harness = false
required-features = ["sha3"]

[[bench]]
name = "ascon"
harness = false
required-features = ["ascon-hash"]

[[bench]]
name = "auth"
harness = false
required-features = ["hkdf", "pbkdf2", "ecdsa", "ed25519", "x25519", "ml-kem"]

[[bench]]
name = "rsa"
harness = false
required-features = ["rsa"]

[[bench]]
name = "password_hashing"
harness = false
required-features = ["argon2", "scrypt", "phc-strings"]

[[bench]]
name = "xxh3"
harness = false
required-features = ["xxh3"]

[[bench]]
name = "rapidhash"
harness = false
required-features = ["rapidhash"]

[[bench]]
name = "crc"
harness = false
required-features = ["checksums"]

[[bench]]
name = "kmac_cshake"
harness = false
required-features = ["sha3", "kmac"]

[lints]
workspace = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = false # I get higher sccache hit rates and faster build/check cycles locally.
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
overflow-checks = true
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
