[package]
name = "checksum"
description = "High-performance CRC checksums with hardware acceleration"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc", "traits/std", "backend/std", "platform/std"]
alloc = ["traits/alloc"]

[dependencies]
traits = { workspace = true, default-features = false } #unified
backend = { workspace = true, default-features = false } #unified
platform = { workspace = true, default-features = false } #unified

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
crc64fast = "1.1.0"
crc64fast-nvme = "1.2.1"
crc-fast = "1.9.0"
crc = "3.3.0"
crc32fast = "1.5.0"
crc32c = "0.6.8"

[[bench]]
name = "comp"
harness = false

[lints]
workspace = true
