[package]
name = "hash"
description = "Cryptographic hash functions with automatic SIMD acceleration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc", "traits/std"]
alloc = ["traits/alloc"]

[dependencies]
traits = { workspace = true } #unified

[dev-dependencies]
criterion = { workspace = true } #unified

[[bench]]
name = "hash"
harness = false

[lints]
workspace = true
