[package]
name = "hashes"
description = "Cryptographic hashes and fast non-cryptographic hashes for rscrypto"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
# std: Runtime CPU detection + all hash APIs
std = ["traits/std", "backend/std", "platform/std"]

[dependencies]
traits = { workspace = true, default-features = false } #unified
backend = { workspace = true, default-features = false } #unified
platform = { workspace = true, default-features = false } #unified

[dev-dependencies]
# Dev-only correctness oracles (not used by library code).
blake3 = { version = "1.8.3", default-features = false, features = ["std"] }
sha2 = { version = "0.10.9", default-features = false, features = ["std", "force-soft"] }
sha3 = "0.10.8"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rapidhash = "4.2.1"
siphasher = "0.3"
tiny-keccak = { version = "2.0.2", features = ["kmac"] }
blake2 = "0.10"
ascon-hash256 = "0.5.0-rc.0"

criterion.workspace = true
digest = { version = "0.10", features = ["dev"] }
proptest.workspace = true

[[bench]]
name = "comp"
harness = false

[[bench]]
name = "kernels"
harness = false

[[bench]]
name = "blake3"
harness = false

[lints]
workspace = true
