[package]
name = "platform"
description = "CPU detection and microarchitecture identification for rscrypto"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
# std: Runtime CPU detection via CPUID/sysctl (requires std::sync::OnceLock)
std = []
# testing: Enable test-only APIs (from_raw, as_raw) for external testing/fuzzing
testing = []

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
