[package]
name = "traits"
description = "Core cryptographic traits for rscrypto"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
# std: Runtime CPU detection + all APIs (implies alloc)
std = ["alloc"]
# alloc: Buffered/streaming APIs without runtime detection
alloc = []

[lints]
workspace = true
